[metadata]
name = zfuzz
version = 1.2
author = Zepp
description = Simple Python Web Fuzzer
license = GNU General Public License v3 (GPLv3)
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
include_package_data = true
python_requires = >= 3.6
packages = zfuzz
setup_requires = setuptools >=30.3.0
install_requires =
	requests
	colored

[options.entry_points]
console_scripts =
    zfuzz = zfuzz.__main__:main
